--- a/{{cookiecutter.app_name}}/Jenkinsfile
+++ b/{{cookiecutter.app_name}}/Jenkinsfile
@@ -22,7 +22,7 @@ userRemoteConfigs: [[credentialsId: 'admingithub', url: 'git@github.com:Gemini-S
                    container('docker-image-builder-trivy') {
                    kubeconfig(credentialsId: 'KubeConfigCred') {
                    sh '/usr/local/bin/kubectl apply -f deployment.yaml -n dev'
-                   sh '/usr/local/bin/kubectl rollout restart Deployment {{cookiecutter.app_name}}backend -n dev'
+                   sh '/usr/local/bin/kubectl rollout restart Deployment {{cookiecutter.app_name}} -n dev'
 
                    }
                    }
